# weekly-time-tracker

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
backend/: requirements.txt
backend/app/: advisor.py  auth.py  behavior.py  database.py  dev.py  main.py  metrics.py  models.py  notifier.py  ownership.py  planner.py  reporting.py  schemas.py  seed.py  sync.py  tracker.py
frontend/: .easignore  .env.example  App.tsx  app.json  babel.config.js  eas.json  package-lock.json  package.json  tsconfig.json
frontend/assets/: README.md
frontend/components/: StartupSplash.tsx  WeeklyPlanner.tsx  WeeklyReview.tsx
frontend/electron/: main.cjs  main.js  preload.cjs
frontend/scripts/: build-web.cjs  env-tools.cjs  package-desktop.cjs
frontend/services/: api.js  authSession.js  executionLoop.js  notificationDelivery.js  notificationPlan.js  notificationRuntime.js  notificationState.js  offlineQueue.ts  offlineStore.js  plannerValidation.js  runtimeConfig.js
frontend/tests/: androidBuildEnv.test.js  api.test.js  desktopBuildEnv.test.js  (+8 more)
sample_data/: seed.json
tests/: test_advisor_feedback.py  test_advisor_week_over_week_memory.py  test_auth_multi_user.py  test_behavior.py  test_database_migrations.py  test_goal_context.py  test_metrics.py  test_planner_reschedule.py  test_reporting.py  test_reporting_category_objectives.py  test_reporting_execution_features.py  test_session_transition_rules.py  test_tracker_execution_enforcement.py
weekly_execution_behavior_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
